Language edits. Abstract edited to sensible length. Units edited.

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -107,7 +107,17 @@ url = {http://www.sympy.org},
   publisher={JSTOR}
 }
 
-
+% theta = 0
+@article{stephens2006estimating,
+  title={Estimating population density from indirect sign: track counts and the Formozov--Malyshev--Pereleshin formula},
+  author={Stephens, PA and Zaumyslova, O Yu and Miquelle, DG and Myslenkov, AI and Hayward, GD},
+  journal={Animal Conservation},
+  volume={9},
+  number={3},
+  pages={339--348},
+  year={2006},
+  publisher={Wiley Online Library}
+}
 
 
 
